# EDA-and-ML

./: pyproject.toml  readme.md
California housing prices/: readme.md
California housing prices/api/: etl.py  main.py  train_model.py
California housing prices/data/: proximity_mapping.json
California housing prices/models/: xgboost_model.json
MRI/: MRI.ipynb  readme.md
