[project]
name = "eda-and-ml"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]
